	Change help reference to new user-tags.html. Add mini form for adding
	tags.
	(task [details], cve-details, cpe-details, ovaldef-details)
	(dfn_cert_adv-details, get_nvts, note [details], override [details])
	(get_report, result-details): Add tag_names parameter to
	user-tags-window call.

2013-05-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	(report [hosts], report [ports], report [closed_cves]): Add count of
	filtered and total number next to page header.
	(report [closed_cves]): Loop directly over closed cve details.

2013-05-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/gsa-style.css: Remove unused actionbar class. Add
	result_section and result_section_top classes.

	* src/html/omp.xsl (result [result-body]): Style updates. Add div
	elements with adequate classes around result sections. Adjust html code
	adequately.

2013-05-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (show-details-icon): Rename to result-details-icon.
	Rename icons tooltips.
	(report [results]): Adjust section-selector wrapper. Remove
	show-details-icon template call. Add whitespace after powerfilter.
	(gsa:table-row-class): No class when position below zero.
	(result-header): Add collapse-details-button parameter. Add collapse
	details icon in vulnerability column header. Fix Actions column width.
	Add alternating background colour for second row. Link to result details
	from vulnerability name. Rearrange notes and overrides buttons for
	consistency.
	(result-detailed): Add collapse-details-button and result-body
	parameters.
	(report [report-sections]: Rename to section-selector. Include wrapper
	html code in template to remove duplicate code by caller.
	(report [hosts], report [ports], report [closed_cves])
	(report [summary]): Remove report-sections wrapper code.
	(report [details]): Adjust result-detailed template call.

2013-05-07  Hani Benhabiles <hani.benhabiles@greenbone.net>
