@@ -23,8 +23,15 @@
 
 2013-05-08  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
-	(report [hosts], report [ports], report [closed_cves]): Add count of
-	filtered and total number next to page header.
+	* src/gsad_omp.c (send_settings_filters): Encode values before sending
+	them.
+	(save_my_settings_omp): Remove double free calls.
+
+2013-05-08  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* src/html/omp.xsl (report [hosts], report [ports])
+	(report [closed_cves]): Add count of filtered and total number next to
+	page header.
 	(report [closed_cves]): Loop directly over closed cve details.
 
 2013-05-08  Hani Benhabiles <hani.benhabiles@greenbone.net>
